lamassu-ca.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: lamassu-ca-deployment
  namespace: default
  labels:
    app: lamassu-ca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lamassu-ca
  template:
    metadata:
      labels:
        app: lamassu-ca
    spec:
      serviceAccountName: lamassu-ca-service-account
      containers:
        - name: lamassu-ca
          image: lamassuiot/lamassu-ca:v1.0.16
      restartPolicy: Always
      volumes:
        - name: initcontainer-cmd
          configMap:  
            name: lamassu-ca-initcontainer-cm
        - name: consul-tls-certificates
          secret:
            secretName: consul-cert-secret
