opa-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: opa-server-deployment
  namespace: default
  labels:
    app: opa-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa-server
  template:
    metadata:
      labels:
        app: opa-server
    spec:
      containers:
        - name: opa-server
          image: openpolicyagent/opa:0.37.1-envoy
          volumeMounts:
            - name: opa-server-policy-config
              mountPath: /opa/policy.rego
              subPath: policy.rego
            - name: opa-server-config-config
              mountPath: /opa/config.yaml
              subPath: config.yaml
          ports:
            - containerPort: 9191
            - containerPort: 8181
          args:
            - run
            - --server
            - --addr=0.0.0.0:8181
            - --config-file=/opa/config.yaml
            - --log-level=info
            - --log-format=text
            - --ignore=.*
            - /opa/policy.rego
      restartPolicy: Always
      volumes:
        - name: opa-server-policy-config
          configMap:  
            name: opa-server-policy-cm
        - name: opa-server-config-config
          configMap:  
            name: opa-server-config-cm
---
apiVersion: v1
kind: Service
metadata:
  name: opa-server
  namespace: default
spec:
  selector:
    app: opa-server
  type: ClusterIP
  ports:
  - name: opa
    port: 9191
    targetPort: 9191
  - name: https
    port: 8181
    targetPort: 8181
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata: 
#   name: opa-server-ingress
#   namespace: default
#   annotations: 
#     cert-manager.io/issuer: "lamassu-ca-issuer"
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
# spec:
#   tls:
#   - hosts:
#     - opa-server.dev.lamassu.io
#     secretName: downstream-crt-secret
#   rules:
#   - host: opa-server.dev.lamassu.io
#     http: 
#       paths:
#       - pathType: Prefix
#         path: /
#         backend: 
#           service: 
#             name: "opa-server"
#             port: 
#               number: 9191
#     http: 
#       paths:
#       - pathType: Prefix
#         path: /
#         backend: 
#           service: 
#             name: "opa-server"
#             port: 
#               number: 8181
