auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: default
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: lamassuiot/lamassu-auth:v1.0.5
          volumeMounts:          
            - name: auth-tls-certificates
              mountPath: /etc/x509/https/tls.crt
              subPath: tls.crt
            - name: auth-tls-certificates
              mountPath: /etc/x509/https/tls.key
              subPath: tls.key
          ports:
            - containerPort: 8080
            - containerPort: 8443
      restartPolicy: Always
      volumes:
        - name: auth-tls-certificates
          secret:
            secretName: auth-cert-secret
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: default
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - name: auth-http
    port: 8080
    targetPort: 8080 
  - name: auth-https
    port: 8443
    targetPort: 8443 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: default
  annotations: 
    cert-manager.io/issuer: "lamassu-ca-issuer"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - auth.dev.lamassu.io
    secretName: downstream-crt-secret
  rules:
  - host: auth.dev.lamassu.io
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: "auth"
            port:
              number: 8080
  - host: auth.dev.lamassu.io
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: "auth"
            port:
              number: 8443
