consul.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: consul-deployment
  namespace: default
  labels:
    app: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: consul:1.9
          volumeMounts:
            - name: consul-pv
              mountPath: /consul/data
            - name: consul-json-config
              mountPath: /consul/config/server.json
              subPath: config.json
            - name: consul-tls-certificates
              mountPath: /consul/tls/internal-ca.crt
              subPath: ca.crt
            - name: consul-tls-certificates
              mountPath: /consul/tls/tls.crt
              subPath: tls.crt
            - name: consul-tls-certificates
              mountPath: /consul/tls/tls.key
              subPath: tls.key
          ports:
            - containerPort: 8501
          command: ["consul", "agent", "-server", "-bootstrap-expect=1", "-data-dir", "/consul/data", "-config-dir", "/consul/config"]
      restartPolicy: Always
      volumes:
        - name: consul-pv
          persistentVolumeClaim:
            claimName: consul-pvc
        - name: consul-json-config
          configMap:  
            name: consul-cm
        - name: consul-tls-certificates
          secret:
            secretName: consul-cert-secret
---
apiVersion: v1
kind: Service
metadata:
  name: consul
  namespace: default
spec:
  selector:
    app: consul
  type: ClusterIP
  ports:
  - name: consul
    port: 8501
    targetPort: 8501
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: consul-ingress
  namespace: default
  annotations: 
    cert-manager.io/issuer: "lamassu-ca-issuer"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - consul.dev.lamassu.io
    secretName: downstream-crt-secret
  rules:
  - host: consul.dev.lamassu.io
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: "consul"
            port:
              number: 8501
