istiothings.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-system-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  #   tls:
  #     httpsRedirect: false # sends 301 redirect for http requests
  # - port:
  #     number: 443
  #     name: https-443
  #     protocol: HTTPS
  #   hosts:
  #   - "*"
  #   tls:
  #     mode: SIMPLE # enables HTTPS on this port
  #     serverCertificate: /etc/certs/servercert.pem
  #     privateKey: /etc/certs/privatekey.pem
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - grafana.34.89.86.167.nip.io
  gateways:
  - istio-system-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3000
        host: grafana
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - kiali.34.89.86.167.nip.io
  gateways:
  - istio-system-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 20001
        host: kiali
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: istio-system
spec:
  hosts:
  - tracing.34.89.86.167.nip.io
  gateways:
  - istio-system-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: tracing
