jaeger.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: jaeger-deployment
  namespace: default
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.30.0
          volumeMounts:
            - name: jaeger-pv
              mountPath: /badger
          ports:
            - containerPort: 6831
              containerPort: 16686
      restartPolicy: Always
      volumes:
        - name: jaeger-pv
          persistentVolumeClaim:
            claimName: jaeger-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: default
spec:
  selector:
    app: jaeger
  type: ClusterIP
  ports:
  - name: udp
    port: 6831
    targetPort: 6831
  - name: http
    port: 16686
    targetPort: 16686
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: jaeger-ingress
  namespace: default
  annotations: 
    cert-manager.io/issuer: "lamassu-ca-issuer"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - jaeger.dev.lamassu.io
    secretName: downstream-crt-secret
  rules:
  - host: jaeger.dev.lamassu.io
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: "jaeger"
            port:
              number: 6831
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: "jaeger"
            port:
              number: 16686
