lamassu-ca-v7.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: lamassu-ca-deployment
  namespace: default
  labels:
    app: lamassu-ca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lamassu-ca
  template:
    metadata:
      labels:
        app: lamassu-ca
    spec:
      serviceAccountName: lamassu-ca-service-account
      containers:
        - name: lamassu-ca
          image: lamassuiot/lamassu-ca:v1.0.18
          volumeMounts:
            - name: lamassu-ca-json-config
              mountPath: /config/vault-credentials.json
              subPath: json-file.json

            - name: lamassu-ca-tls-certificates
              mountPath: /certs/vault.crt
              subPath: ca.crt

            - name: lamassu-ca-tls-certificates
              mountPath: /certs/tls.crt
              subPath: tls.crt

            - name: lamassu-ca-tls-certificates
              mountPath: /certs/tls.key
              subPath: tls.key

            - name: lamassu-ca-tls-certificates
              mountPath: /certs/internal-ca.crt
              subPath: ca.crt
          ports:
            - containerPort: 8087
      restartPolicy: Always
      volumes:
        - name: initcontainer-cmd
          configMap:  
            name: lamassu-ca-initcontainer-cm

        - name: lamassu-ca-json-config
          secret:
            secretName: vault-credentials-file

        - name: lamassu-ca-tls-certificates
          secret:
            secretName: lamassu-ca-cert-secret
---
apiVersion: v1
kind: Service
metadata:
  name: lamassu-ca
  namespace: default
spec:
  selector:
    app: lamassu-ca
  type: ClusterIP
  ports:
  - name: lamassu-ca
    port: 8087
    targetPort: 8087 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lamassu-ca-ingress
  namespace: default
  annotations: 
    cert-manager.io/issuer: "lamassu-ca-issuer"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - lamassu-ca.dev.lamassu.io
    secretName: downstream-crt-secret
  rules:
  - host: lamassu-ca.dev.lamassu.io
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: "lamassu-ca"
            port:
              number: 8087
