lamassu-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lamassu-db-deployment
  namespace: default
  labels:
    app: lamassu-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lamassu-db
  template:
    metadata:
      labels:
        app: lamassu-db
    spec:
      containers:
        - name: lamassu-db
          image: lamassuiot/lamassu-db:v1.0.6
          volumeMounts:
            - name: lamassu-db-pv
              mountPath: /var/lib/postgresql/data
          ports:
            - containerPort: 5432
      restartPolicy: Always
      volumes:
        - name: lamassu-db-pv
          persistentVolumeClaim:
            claimName: lamassu-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: lamassu-db
  namespace: default
spec:
  selector:
    app: lamassu-db
  type: ClusterIP
  ports:
  - name: lamassu-db
    port: 5432
    targetPort: 5432
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: lamassu-db-ingress
  namespace: default
  annotations: 
    cert-manager.io/issuer: "lamassu-ca-issuer"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - lamassu-db.dev.lamassu.io
    secretName: downstream-crt-secret
  rules:
  - host: lamassu-db.dev.lamassu.iov
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: "lamassu-db"
            port:
              number: 5432
