ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: ui-deployment
  namespace: default
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:     
      containers:
        - name: lamassu-ui
          image: lamassuiot/lamassu-ui:v0.0.6
          volumeMounts:
            - name: ui-tls-certificates
              mountPath: /certs/ui.crt
              subPath: tls.crt
            - name: ui-tls-certificates
              mountPath: /certs/ui.key
              subPath: tls.key
          ports:
            - containerPort: 443
      restartPolicy: Always
      volumes:
        - name: ui-tls-certificates
          secret:
            secretName: ui-cert-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: default
spec:
  selector:
    app: ui
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: 443 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: default
  annotations: 
    cert-manager.io/issuer: "lamassu-ca-issuer"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - dev.lamassu.io
    secretName: downstream-crt-secret
  rules:
  - host: dev.lamassu.io
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: "ui"
            port:
              number: 443
