vault.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-deployment
  namespace: default
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: vault:1.7.3
          volumeMounts:
            - name: vault-json-config
              mountPath: /vault/config/config.json
              subPath: config.json
            - name: vault-tls-certificates
              mountPath: /vault/tls/consul.crt
              subPath: ca.crt                      
            - name: vault-tls-certificates
              mountPath: /vault/tls/tls.crt
              subPath: tls.crt
            - name: vault-tls-certificates
              mountPath: /vault/tls/tls.key
              subPath: tls.key
          ports:
            - containerPort:  8200
          command: ["vault", "server", "-config", "/vault/config/config.json"]
      restartPolicy: Always
      volumes:
        - name: vault-json-config
          configMap:
            name: vault-cm
        - name: vault-tls-certificates
          secret:
            secretName: vault-cert-secret
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: default
spec:
  selector:
    app: vault
  type: ClusterIP
  ports:
  - name: vault
    port: 8200
    targetPort: 8200 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: default
  annotations: 
    cert-manager.io/issuer: "lamassu-ca-issuer"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - vault.dev.lamassu.io
    secretName: downstream-crt-secret
  rules:
  - host: vault.dev.lamassu.io
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: "vault"
            port:
              number: 8200
